[project]
name = "gen-art-experiment-1"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "certifi==2026.6.17",
    "charset-normalizer==3.4.9",
    "idna==3.18",
    "joblib==1.5.3",
    "loguru==0.7.3",
    "narwhals==2.23.0",
    "numpy==2.5.1",
    "pandas==3.0.3",
    "python-dateutil==2.9.0.post0",
    "requests==2.34.2",
    "scikit-learn==1.9.0",
    "scipy==1.18.0",
    "six==1.17.0",
    "threadpoolctl==3.6.0",
    "urllib3==2.7.0",
]
